add footer and center it

--- a/probability/01/style.css
+++ b/probability/01/style.css
@@ -99,3 +99,9 @@ main,
 .explanation p {
   font-size: 1.8em;
 }
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
