add functionality to download experiments summary

--- a/probability/01/style.css
+++ b/probability/01/style.css
@@ -13,7 +13,8 @@ a {
 }
 
 main,
-.summary {
+.summary,
+.download-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,6 +81,37 @@ main,
   left: 5px;
   transition: 0.2s;
   background-color: gold;
+}
+
+.download {
+  min-width: 130px;
+  height: 40px;
+  color: #fff;
+  padding: 5px 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  outline: none;
+  border: 1px solid #000;
+  color: #000;
+  background: transparent;
+}
+.download:hover:after {
+  top: 0;
+  left: 0;
+}
+.download:after {
+  content: "";
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 5px;
+  left: 5px;
+  transition: 0.2s;
+  background-color: #80ed99;
 }
 
 .center-article {
